include/xprm.bas


' Array access
Declare PtrSafe Function XPRMgetarrval Lib "xprmvb" Alias "vbXPRMgetarrval" (ByVal mmarray As LongPtr, ByRef indices() As Long, ByRef adr As Variant) As Long
Declare PtrSafe Sub XPRMgetarrsets Lib "xprmvb" Alias "vbXPRMgetarrsets" (ByVal mm_array As LongPtr, ByRef sets() As LongPtr)
Declare PtrSafe Function XPRMgetarrdim Lib "xprmvb" Alias "vbXPRMgetarrdim" (ByVal mmarray As LongPtr) As Long
Declare PtrSafe Function XPRMgetarrtype Lib "xprmvb" Alias "vbXPRMgetarrtype" (ByVal mmarray As LongPtr) As Long
Declare PtrSafe Function XPRMgetarrsize Lib "xprmvb" Alias "vbXPRMgetarrsize" (ByVal mmarray As LongPtr) As Long
Declare PtrSafe Function XPRMgetfirstarrentry Lib "xprmvb" Alias "vbXPRMgetfirstarrentry" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMgetfirstarrtruentry Lib "xprmvb" Alias "vbXPRMgetfirstarrtruentry" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMgetlastarrentry Lib "xprmvb" Alias "vbXPRMgetlastarrentry" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMgetnextarrentry Lib "xprmvb" Alias "vbXPRMgetnextarrentry" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMgetnextarrtruentry Lib "xprmvb" Alias "vbXPRMgetnextarrtruentry" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMchkarrind Lib "xprmvb" Alias "vbXPRMchkarrind" (ByVal mmarray As LongPtr, ByRef indices() As Long) As Long
Declare PtrSafe Function XPRMcmpindices Lib "xprmvb" Alias "vbXPRMcmpindices" (ByVal nbdim As Long, ByRef ind1() As Long, ByRef ind2() As Long) As Long

'Record access
Declare PtrSafe Function XPRMgetnextfield Lib "xprmvb" Alias "vbXPRMgetnextfield" (ByVal model As LongPtr, ByVal ref As LongPtr, ByVal code As Long, ByRef name As String, ByRef typecode As Long, ByRef number As Long) As LongPtr
' The VB version of XPRMgetfieldval takes an extra parameter (compared to the C version) telling it the type of the data in the field
Declare PtrSafe Sub XPRMgetfieldval Lib "xprmvb" Alias "vbXPRMgetfieldval" (ByVal model As LongPtr, ByVal recordtype As Long, ByVal recordptr As LongPtr, ByVal fieldnum As Long, ByVal fieldtype As Long, ByRef value As Variant)

' Solution
Declare PtrSafe Function XPRMgetvarnum Lib "xprmvb" Alias "vbXPRMgetvarnum" (ByVal model As LongPtr, ByVal var As LongPtr) As Long
Declare PtrSafe Function XPRMgetctrnum Lib "xprmvb" Alias "vbXPRMgetctrnum" (ByVal model As LongPtr, ByVal ctr As LongPtr) As Long
Declare PtrSafe Function XPRMgetprobstat Lib "xprmvb" Alias "vbXPRMgetprobstat" (ByVal model As LongPtr) As Long
Declare PtrSafe Function XPRMgetobjval Lib "xprmvb" Alias "vbXPRMgetobjval" (ByVal model As LongPtr) As Double
Declare PtrSafe Function XPRMgetvsol Lib "xprmvb" Alias "vbXPRMgetvsol" (ByVal model As LongPtr, ByVal var As LongPtr) As Double
Declare PtrSafe Function XPRMgetcsol Lib "xprmvb" Alias "vbXPRMgetcsol" (ByVal model As LongPtr, ByVal ctr As LongPtr) As Double
Declare PtrSafe Function XPRMgetrcost Lib "xprmvb" Alias "vbXPRMgetrcost" (ByVal model As LongPtr, ByVal var As LongPtr) As Double
Declare PtrSafe Function XPRMgetdual Lib "xprmvb" Alias "vbXPRMgetdual" (ByVal model As LongPtr, ByVal crt As LongPtr) As Double
Declare PtrSafe Function XPRMgetslack Lib "xprmvb" Alias "vbXPRMgetslack" (ByVal model As LongPtr, ByVal ctr As LongPtr) As Double
Declare PtrSafe Function XPRMgetact Lib "xprmvb" Alias "vbXPRMgetact" (ByVal model As LongPtr, ByVal ctr As LongPtr) As Double

' Miscellaneous
Declare PtrSafe Function XPRMinit Lib "xprm_rt" () As Long
Declare PtrSafe Function XPRMfinish Lib "xprmvb" Alias "vbXPRMfinish" () As Long
Declare PtrSafe Function XPRMfree Lib "xprmvb" Alias "vbXPRMfinish" () As Long
Declare PtrSafe Function XPRMgetlicerrmsg Lib "xprmvb" Alias "vbXPRMgetlicerrmsg" (ByRef msg As String) As Long
Declare PtrSafe Function XPRMlicense Lib "xprmvb" Alias "vbXPRMlicense" (ByRef oemnum As Long, ByRef oemmsg As String) As Long
Declare PtrSafe Function XPRMgetlicinfo Lib "xprmvb" Alias "vbXPRMgetlicinfo" () As String
Declare PtrSafe Sub XPRMsetlocaledir Lib "xprm_rt" (ByVal path As String)
Declare PtrSafe Function XPRMgetlocaledir Lib "xprmvb" Alias "vbXPRMgetlocaledir" () As String
Declare PtrSafe Function XPRMgetversion Lib "xprmvb" Alias "vbXPRMgetversion" () As String
Declare PtrSafe Function XPRMgetversions Lib "xprm_rt" (ByVal whichone As Long) As Long
Declare PtrSafe Function XPRMexportprob Lib "xprmvb" Alias "vbXPRMexportprob" (ByVal model As LongPtr, ByVal options As String, ByVal fname As String, ByVal obj As LongPtr) As Long

Declare PtrSafe Sub XPRMskipalldep Lib "xprmvb" Alias "vbXPRMskipalldep" (ByVal model As LongPtr, ByVal ref As LongPtr)

Declare PtrSafe Function XPRMgettypeprop Lib "xprmvb" Alias "vbXPRMgettypeprop" (ByVal model As LongPtr, ByVal ntyp As Long, ByVal what As Long, ByRef value As Variant) As Long
Declare PtrSafe Function XPRMfindtypecode Lib "xprm_rt" (ByVal model As LongPtr, ByVal typenme As String) As Long

' DSO module
Declare PtrSafe Function XPRMregstatdso Lib "xprm_rt" (ByVal name As String, ByVal dsoinit As LongPtr) As Long
Declare PtrSafe Function XPRMpreloaddso Lib "xprm_rt" (ByVal name As String) As LongPtr
Declare PtrSafe Function XPRMgetnextdsoproc Lib "xprmvb" Alias "vbXPRMgetnextdsoproc" (ByVal dso As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef partyp As String, ByRef nbpar As Long, ByRef ftype As Long) As LongPtr
Declare PtrSafe Function XPRMgetnextdsoconst Lib "xprmvb" Alias "vbXPRMgetnextdsoconst" (ByVal dso As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef ctype As Long, ByRef value As Variant) As LongPtr
Declare PtrSafe Function XPRMgetnextdsotype Lib "xprmvb" Alias "vbXPRMgetnextdsotype" (ByVal dso As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef flag As Long) As LongPtr
Declare PtrSafe Function XPRMgetnextdsoparam Lib "xprmvb" Alias "vbXPRMgetnextdsoparam" (ByVal dso As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef desc As String, ByRef ptype As Long) As LongPtr
Declare PtrSafe Function XPRMgetdsoparam Lib "xprmvb" Alias "vbXPRMgetdsoparam" (ByVal model As LongPtr, ByVal dso As LongPtr, ByVal name As String, ByRef ptype As Long, ByRef value As Variant) As Long
Declare PtrSafe Sub XPRMautounloaddso Lib "xprm_rt" (ByVal yesno As Long)
Declare PtrSafe Sub XPRMflushdso Lib "xprm_rt" ()
Declare PtrSafe Function XPRMgetnextdso Lib "xprm_rt" (ByVal dso As LongPtr) As LongPtr
Declare PtrSafe Function XPRMfinddso Lib "xprm_rt" (ByVal name As String) As LongPtr
Declare PtrSafe Sub XPRMsetdsopath Lib "xprm_rt" (ByVal path As String)
Declare PtrSafe Function XPRMgetdsopath Lib "xprmvb" Alias "vbXPRMgetdsopath" (ByRef path As String) As Long
Declare PtrSafe Function XPRMdsotyptostr Lib "xprmvb" Alias "vbXPRMdsotyptostr" (ByVal model As LongPtr, ByVal code As Long, ByVal value As LongPtr, ByRef str As String) As Long
Declare PtrSafe Function XPRMgetdsoprop Lib "xprmvb" Alias "vbXPRMgetdsoprop" (ByVal dso As LongPtr, ByVal what As Long, ByRef result As Variant) As Long

' Stream redirection
Declare PtrSafe Function XPRMsetdefstream Lib "xprmvb" Alias "vbXPRMsetdefstream" (ByVal model As LongPtr, ByVal wmd As Long, ByVal name As String) As Long

' Begin/end licensing
Declare PtrSafe Function XPRMbeginlicensing Lib "xprm_rt" (ByRef bIsLicensed As Long) As Long
Declare PtrSafe Function XPRMendlicensing Lib "xprm_rt" () As Long

' the functions below are now obsolete but are included for backwards compatibility
' type interrogating
Declare PtrSafe Function XPRM_TYP Lib "xprmvb" Alias "vbXPRM_TYP" (ByVal t As Long) As Long
Declare PtrSafe Function XPRM_STR Lib "xprmvb" Alias "vbXPRM_STR" (ByVal t As Long) As Long
Declare PtrSafe Function XPRM_GRP Lib "xprmvb" Alias "vbXPRM_GRP" (ByVal t As Long) As Long

' IO driver
Declare PtrSafe Function XPRM_IO_CB Lib "xprmvb" Alias "vbXPRM_IO_CB" (ByVal address As LongPtr) As String

' Callback-initialization IO driver
Declare PtrSafe Function XPRMcb_sendint Lib "xprm_rt" (ByVal cb As LongPtr, ByVal i As Long, ByVal bFlush As Long) As Long
Declare PtrSafe Function XPRMcb_sendreal Lib "xprm_rt" (ByVal cb As LongPtr, ByVal d As Double, ByVal bFlush As Long) As Long
Declare PtrSafe Function XPRMcb_sendstring Lib "xprm_rt" (ByVal cb As LongPtr, ByVal s As String, ByVal bFlush As Long) As Long
Declare PtrSafe Function XPRMcb_sendctrl Lib "xprm_rt" (ByVal cb As LongPtr, ByVal d As Byte, ByVal bFlush As Long) As Long


' Time functions
Declare PtrSafe Function XPRMdate2jdn Lib "xprmvb" Alias "vbXPRMdate2jdn" (ByVal y As Long, ByVal m As Long, ByVal d As Long) As Long
Declare PtrSafe Sub XPRMjdn2date Lib "xprmvb" Alias "vbXPRMjdn2date" (ByVal jd As Long, ByRef y As Long, ByRef m As Long, ByRef d As Long)
Declare PtrSafe Sub XPRMtime Lib "xprmvb" Alias "vbXPRMtime" (ByRef jdn As Long, ByRef t As Long, ByRef utc As Long)


' Debugging
Declare PtrSafe Function XPRMdbg_runmod Lib "xprm_rt" (ByVal model As LongPtr, ByRef returned As Long, ByVal parlist As String, ByVal dbgcb As LongPtr, ByVal dbgctx As LongPtr) As Long
Declare PtrSafe Function XPRMdbg_getnblndx Lib "xprm_rt" (ByVal model As LongPtr) As Long
Declare PtrSafe Function XPRMdbg_clearbrkp Lib "xprm_rt" (ByVal model As LongPtr, ByVal lindex As Long) As Long
Declare PtrSafe Function XPRMdbg_setbrkp Lib "xprm_rt" (ByVal model As LongPtr, ByVal lindex As Long) As Long
Declare PtrSafe Function XPRMdbg_setstacklev Lib "xprm_rt" (ByVal model As LongPtr, ByVal level As Long) As Long
Declare PtrSafe Function XPRMdbg_getlocation Lib "xprmvb" Alias "vbXPRMdbg_getlocation" (ByVal model As LongPtr, ByVal lindex As Long, ByRef line As Long, ByRef filename As String) As Long
Declare PtrSafe Function XPRMdbg_findproclndx Lib "xprm_rt" (ByVal model As LongPtr, ByVal proc As LongPtr) As Long

' Annotations
Declare PtrSafe Function XPRMgetnextanident Lib "xprmvb" Alias "vbXPRMgetnextanident" (ByVal model As LongPtr, ByRef ref As LongPtr) As String
Private Declare PtrSafe Function cXPRMgetannotations Lib "xprm_rt" Alias "XPRMgetannotations" (ByVal model As LongPtr, ByVal ident As LongPtr, ByVal prefix As LongPtr, ByRef annStrings As LongPtr, ByVal maxann As Long) As Long
Private Declare PtrSafe Function cXPRMgetdsoannotations Lib "xprm_rt" Alias "XPRMgetdsoannotations" (ByVal dso As LongPtr, ByVal prefix As LongPtr, ByRef annStrings As LongPtr, ByVal maxann As Long) As Long

Public Function XPRMgetannotations(ByVal model As Long, ByVal ident As String, ByVal prefix As String, ByRef annotations() As String, ByVal maxann As Long) As Long
    Dim i, nStrings As Long, nStringsFetched As Long
    Dim annptrs() As LongPtr
    ReDim annptrs(1 To maxann + 1)
    Dim identptr As LongPtr
    If ident = "" Then
        identptr = 0
    Else
        identptr = StrPtr(ident)
    End If
    
    nStrings = cXPRMgetannotations(model, identptr, StrPtr(prefix), annptrs(1), maxann)
    nStringsFetched = nStrings
    If nStringsFetched > maxann Then
        nStringsFetched = maxann
    End If
    
    If nStringsFetched > 0 Then
        For i = 1 To nStringsFetched
            annotations(LBound(annotations) + i - 1) = XPRMreadcstring(annptrs(i))
        Next
    End If
    XPRMgetannotations = nStrings
End Function

Public Function XPRMgetdsoannotations(ByVal dso As Long, ByVal prefix As String, ByRef annotations() As String, ByVal maxann As Long) As Long
    Dim i, nStrings As Long, nStringsFetched As Long
    Dim annptrs() As LongPtr
    ReDim annptrs(1 To maxann + 1)
    
    nStrings = cXPRMgetdsoannotations(model, StrPtr(prefix), annptrs(1), maxann)
    nStringsFetched = nStrings
    If nStringsFetched > maxann Then
        nStringsFetched = maxann
    End If
